# search

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
src/: __init__.py  app.py
src/chat/: __init__.py  assistant.py  history.py
src/memory/: __init__.py  memory_manager.py  tool_counter.py
src/search/: __init__.py  tools.py
src/search/providers/: duckduckgo.py  firecrawl.py  serpapi.py
tests/: test_memory_manager.py
