[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grrowl-search"
version = "0.1.0"
authors = [
    { name = "Tom McKenzie" },
]
description = "AI Assistant with web search capabilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "anthropic",
    "python-dotenv", 
    "duckduckgo-search",
    "tiktoken",
    "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}
